Bug/#70 백엔드 빌드 안되는 오류 수정 & 리팩토링 (#71)
* fix: 빌드 에러 수정

* refactor: 중복된 코드 제거

* fix: 그레이들 테스트 시 스레드 수 조정

* fix: 엔티티에 빌더 및 게터 어노테이션 추가

* test: 누락된 테스트 코드 추가

* refactor: mapper 네이밍 컨벤션 통일

* refactor: 포트, 서비스 네이밍 컨벤션 통일

- 읽기, 쓰기 인터페이스 분리 안함
- application.port : XXXPort
- infrastructure.adapter : XXXPortAdapter

* refactor: PopupDetail 대체 도메인 모델 생성

* refactor: 팝업 관련 도메인 포트 추가

* refacctor: 어플리케이션 서비스, mapper 리팩토링

* refactor: 기존 코드에서 PopupDetail 클래스 사용처 삭제 및 새로운 클래스 이름 변경

* refactor: Waiting 연관 도메인 모델 패키지 묶기

* refactor: 새로 만든 어뎁터 구현